samples/_failures_safe/1761421439_f4ff5d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ee3fc79c.c: In function ‘tokenize’:
./samples/SAFE/__tmp_ee3fc79c.c:158:9: error: expected identifier at end of input
  158 |         tokens[token_count].
      |         ^~~~~~
./samples/SAFE/__tmp_ee3fc79c.c:158:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ee3fc79c.c:158:9: error: expected declaration or statement at end of input
